--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 @charset "utf-8";
 /* CSS Document */
 /************FONTS*****************/
@@ -122,7 +121,7 @@ h2{	text-align:left;
 .keycolor3 { width:60px; height:15px;   display:table-cell; background:#0C0; }
 .youAreHere { width:60px; height:15px;  display:table-cell; background:red; text-align:center; font-weight:bold; }
 .keyroomNumber {width:200px; text-align:left; display:table-cell; padding:.25em .75em;  }
-
+img.target {max-width:20px; margin:0 auto; padding:0; }
 h4 { font-family:'League Gothic', sans-serif; font-size:1.5em; font-style:italic; margin:.5em; color:#fff; }
 /*************pop ups***********************/
 /*keep all classes and Id's intact for the JS*/
